# CHIP8

./: CMakeLists.txt
src/: main.c
